# MINTyper

./: .gitignore  MANIFEST.in  MINTGraft  MINTGraftFunctions.py  MINTGraftInstall.py  MINTyper  MINTyper.py  MINTyperFunctions.py  MINTyperInstall.py  MinIONTree  MinIONTreeFunctions.py  MinIONTreeInstall.py  Mint3  Mint3Functions.py  README.md  dcmMethylations.txt  environment.yml  local_install.py  mintinstall.py  mintyper.yml  mintyper_local.py  setup.cfg  setup.py  wrapper.py
mintyper/: __main__.py  ccphylo.py  findBestTemplate.py  kma.py  mintyperFunctions.py  mintyperPipeline.py  mintyper_functions.py  validateInput.py
scripts/: install_dependencies.py  local_install.py
testrun/: .template_sequence.swp
